ipc/ipdl/test/ipdl/error/PInconsistentMoveOnly.ipdl
//error: inconsistent moveonly status of type `::mozilla::ipc::SomeMoveonlyType`
//error: inconsistent moveonly status of type `::mozilla::ipc::SomeMoveonlySendType`

[MoveOnly] using class mozilla::ipc::SomeMoveonlyType from "SomeFile.h";
using class mozilla::ipc::SomeMoveonlyType from "SomeFile.h";

[MoveOnly=send] using class mozilla::ipc::SomeMoveonlySendType from "SomeFile.h";
[MoveOnly=data] using class mozilla::ipc::SomeMoveonlySendType from "SomeFile.h";

[ChildProc=any]
protocol PInconsistentMoveOnly {
child:
  async SomeMessage();
};
